Inclusão dos arquivos de configuração do ambiente de desenvolvimento.

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
-.classpath
-.mvn/
-.project
-.settings
+#.classpath
+#.mvn/
+#.project
+#.settings
 bin/
-mvnw
-mvnw.cmd
-target
+#mvnw
+#mvnw.cmd
+target/
